# pdf2md-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.md
docs/superpowers/plans/: 2026-07-15-pages-parameter.md
docs/superpowers/specs/: 2026-07-15-pages-parameter-design.md
src/convertpdf/: __init__.py  __main__.py  cache.py  cli.py  config.py  llm_retry.py  pages.py  pdf_renderer.py  token_budget.py  vision.py
src/convertpdf/crew/: agents.py  multimodal_patch.py  runner.py  tasks.py
src/pdf2md_agent/: AGENTS.md  __about__.py  __init__.py  __main__.py  cache.py  cli.py  config.py  ctx_probe.py  llm_retry.py  pages.py  pdf_renderer.py  post_stream.py  raw_pipeline.py  render_skip.py  token_budget.py  vision.py
src/pdf2md_agent/crew/: AGENTS.md  agents.py  multimodal_patch.py  runner.py  tasks.py
tests/: test_cache.py  test_config.py  test_ctx_probe.py  test_d8_coverage.py  test_llm_retry.py  test_misc_coverage.py  test_no_cache.py  test_pages.py  test_pdf_renderer.py  test_post_stream.py  test_reformat.py  test_render_skip.py  test_runner.py  test_token_budget.py  test_vision.py
