[project]
name = "pdf2md-agent"
version = "0.2.0"
description = "Convert PDF documents to language-preserving Markdown by rendering each page to an image and feeding it through a CrewAI pipeline of vision agents. Defaults to the MiniMax-M3 OpenAI-compatible endpoint; any vision LLM behind an OpenAI-style API works via OPENAI_BASE_URL."
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24,<2",
    "crewai>=0.80,<2",
    # openai used transitively via crewai LLM provider
    "openai>=1.0,<2",
    "python-dotenv>=1.0,<2",
    "Pillow>=10.0",  # image downscale / resize in multimodal_patch, runner, token_budget
]

[project.scripts]
pdf2md-agent = "pdf2md_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md_agent"]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra"]
